[tool.poetry]
name = "fastapi-project1"
version = "0.1.0"
description = ""
authors = ["mjoao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
requests = "^2.32.3"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
